modificacion en columna de tabla electores del padron

--- a/apps/votacion/templates/votacion/snippets/table.html
+++ b/apps/votacion/templates/votacion/snippets/table.html
@@ -25,7 +25,7 @@
             </button>
           </form>
           {% elif elector.transaction_status == 3 %}
-            {{elector.transaction_datetime}}
+            <a href="#" class="btn btn-primary">Ver comprobante</a>
           {% endif %}
           <!--/'Acción' cell-->
         </td>
